--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Loan Application — Totally Serious Bank</title>
+<title>Loan Application</title>
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container" id="page">
     <h1>Loan Application</h1>
-    <p class="lead">Fill this form to see if you qualify for our totally-not-made-up loan program.</p>
+    <p class="lead">Fill this form to see if you qualify for our loan program.</p>
 
     <form id="loanForm" autocomplete="off">
       <div class="row">
         <div style="flex:1">
           <label for="name">Full name</label>
-          <input id="name" name="name" type="text" placeholder="e.g., John Doo" required />
+          <input id="name" name="name" type="text" placeholder="e.g., Reinhard" required />
         </div>
         <div style="width:120px">
           <label for="age">Age</label>
@@ -26,7 +26,7 @@
       <div class="row">
         <div style="flex:1">
           <label for="amount">Loan amount (₦)</label>
-          <input id="amount" name="amount" type="number" min="1000" placeholder="20000" required />
+          <input id="amount" name="amount" type="number" min="1000" placeholder="500" required />
         </div>
         <div style="width:170px">
           <label for="term">Term</label>
