--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="row">
         <div style="flex:1">
           <label for="amount">Loan amount (₦)</label>
-          <input id="amount" name="amount" type="number" min="1000" placeholder="500" required />
+          <input id="amount" name="amount" type="number" min="1000" placeholder="Min-500" required />
         </div>
         <div style="width:170px">
           <label for="term">Term</label>
